Bug 345878 - Untranslated strings in Widgets Explorer
Summary: Untranslated strings in Widgets Explorer
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: 5.2.90
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-05 03:26 UTC by André Marcelo Alvarenga
Modified: 2016-01-10 00:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-04-05 03:26:22 UTC
Click on Categories button in Widgets Explorer.

Categories list:

All Widgets - ok
Running - ok
---
   Categories:  - ok
---
Application Launchers - Untranslated
Clipboard - Untranslated
Containments - ok
Date and Time - Untranslated
File System - Untranslated
Fun and Games - Untranslated
Multimedia - Untranslated
System Information - Untranslated
Tasks - Untranslated
Utilities - Untranslated
Windows and Tasks - Untranslated


'ok' strings are in plasmashellprivateplugin.pot
'Untranslated' strings are in libplasma5.pot

Reproducible: Always
Comment 1 Bhushan Shah 2015-04-05 04:13:20 UTC
Git commit 18299aae16d416ef01c39cef5c6ea29b98841bc6 by Bhushan Shah.
Committed on 05/04/2015 at 04:13.
Pushed by bshah into branch 'master'.

Categories string are in libplasma5 catalog
FIXED-In: 5.3

M  +1    -1    components/shellprivate/widgetexplorer/widgetexplorer.cpp

http://commits.kde.org/plasma-workspace/18299aae16d416ef01c39cef5c6ea29b98841bc6
Comment 2 Bhushan Shah 2015-04-05 04:40:44 UTC
On Sun, Apr 5, 2015 at 8:56 AM, André Marcelo Alvarenga
<alvarenga@kde.org> wrote:
> Containments - ok

This category should not be present in the widget explorer UI, I just
fixed problem in

http://commits.kde.org/plasma-workspace/005ea5f7af6bbeda173b0a60c5511f30ca3f294f
Comment 3 André Marcelo Alvarenga 2015-05-09 23:05:42 UTC
Still missing translations to Clipboard, File System and Tasks categories.
Comment 4 André Marcelo Alvarenga 2016-01-10 00:06:05 UTC
Still missing translations to Clipboard and Tasks categories.

Plasma 5.5.3