Categories string are in libplasma5 catalog

BUG: 345878
FIXED-In: 5.3